--- a/templates/question.html
+++ b/templates/question.html
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col">
                     <div class="input-group mb-3">
-                        <input required name="user_answer" id="id_user_answer" type="text" class="form-control">
+                        <input required minlength="1" name="user_answer" id="id_user_answer" type="text" class="form-control">
                         <div class="input-group-append">
                             <button class="btn btn-secondary btn-lg" type="submit">Sprawdź</button>
                         </div>
