--- a/templates/reward.html
+++ b/templates/reward.html
@@ -5,5 +5,8 @@
 {% endblock header %}
 
 {% block main_content %}
-{{ reward }}
+    <div class="alert alert-info" role="alert">
+        <h4 class="alert-heading">Gratulacje!</h4>
+        <p> {{ reward }} </p>
+    </div>
 {% endblock main_content %}
